<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <TextView 
        android:id="@+id/author_lastname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_lastname_text"
        ></TextView>
    
    <EditText
        android:id="@+id/author_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/author_lastname_textview"
        android:layout_toRightOf="@+id/author_lastname_textview"
        android:inputType="textCapWords"
        
        ></EditText>
    
    
    
    <TextView 
        android:id="@+id/author_firstname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_firstname_text"
        android:layout_below="@+id/author_lastname_textview"
        ></TextView>
    
    <EditText
        android:id="@+id/author_firstname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/author_firstname_textview"
        android:layout_alignBaseline="@+id/author_firstname_textview"
        android:inputType="textCapWords"
        ></EditText>
    
    
    
    
    <TextView 
        android:id="@+id/year_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_text"
        android:layout_below="@+id/author_firstname_textview"
        ></TextView>
    
    <EditText
        android:id="@+id/year_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/year_textview"
        android:layout_alignBaseline="@+id/year_textview"
        android:inputType="number"
        ></EditText>
    
    
    <TextView 
        android:id="@+id/place_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_text"
        android:layout_below="@+id/year_textview"
        ></TextView>
    
    <EditText
        android:id="@+id/place_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/place_textview"
        android:layout_alignBaseline="@+id/place_textview"
        android:inputType="textCapWords"
        
        ></EditText>
    
    
    
    <TextView 
        android:id="@+id/publisher_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publisher_text"
        android:layout_below="@+id/place_textview"
        ></TextView>
    
    <EditText
        android:id="@+id/publisher_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/publisher_textview"
        android:layout_alignBaseline="@+id/publisher_textview"
        android:inputType="textCapWords"
        ></EditText>
    
    
    <Spinner
        android:id="@+id/list_spinner"
        android:spinnerMode="dropdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publisher_textview"
        android:layout_centerHorizontal="true"
        ></Spinner>
    
    <Button 
        android:id="@+id/enter_button"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_spinner"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_button_text"
        />
    
    
    <Button
        android:id="@+id/goToSource_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToSource_button_text"
        android:layout_below="@+id/enter_button"
        android:layout_centerHorizontal="true"
        ></Button>
    
    
    
    
    


</RelativeLayout>